add html content

--- a/index.html
+++ b/index.html
@@ -4,9 +4,31 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="./assets/css/style.css">
+  <title>Booze n Binge</title>
 </head>
 <body>
+  <header>
+    <h1 id="title">Booze n Binge</h1>
+  </header>
+
+  <main class="container">
+    <div class="card">
+      <h2>Movie Picker card</h2>
+    </div>
+    <div class="card">
+      <h2>Drink Picker Card</h2>
+    </div>
+  </main>
+
+  <div id="hidden">
+    <h3>Thanks for choosing Booze n Binge!</h3>
+    <h4>Previous Pairings:</h4>
+    <ul id="storage-container">
+      <!-- <li>Previous pairings1</li> -->
+    </ul>
+  </div>
+  
   
 </body>
 </html>
