add script link to html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
       <!-- <li>Previous pairings1</li> -->
     </ul>
   </div>
-  
-  
+  <script src="./assets/js/script.js"></script>
 </body>
 </html>
