add dynamic displaying for cocktail information

--- a/index.html
+++ b/index.html
@@ -36,6 +36,18 @@
       </div>
       <div class="card column is-4 is-half">
         <h2 class="card-header-title is-centered">Drink Picker Card</h2>
+        <div class="drink-container">
+          <!-- <h3>Random Drink Name</h3>
+          <img id="drink-img"/>
+          <ul>
+            <li>Drink Ingrediants 1</li>
+            <li>Drink Ingrediants 2</li>
+            <li>Drink Ingrediants 3</li>
+            <li>Drink Ingrediants 4</li>
+          </ul>
+          <br>
+          <p>Drink Instructions here:</p> -->
+        </div>
         <div class="dropdown mt-5">
           <div class="dropdown-trigger">
             <button class="button" aria-haspopup="true" aria-controls="dropdown-menu3">
@@ -62,6 +74,7 @@
     </div>
 
   </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="./assets/js/script.js"></script>
 </body>
 
