updated style, got rid of dropdown for liquor card, and added netflix font

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
   <link rel="stylesheet" href="./assets/css/style.css">
   <title>Booze n Binge</title>
@@ -13,7 +16,7 @@
 <body>
   <header class="hero">
     <div class="hero-body">
-      <h1 id="title">Booze n Binge</h1>
+      <h1 id="title" class="title is-1 has-text-white has-text-centered">Booze n Binge</h1>
     </div>
   </header>
 
@@ -29,36 +32,31 @@
               <span class="icon is-small">
                 <i class="fas fa-angle-down" aria-hidden="true"></i>
               </span>
-              
+
             </button>
           </div>
         </div>
       </div>
       <div class="card column is-4 is-half">
         <h2 class="card-header-title is-centered">Drink Picker Card</h2>
-        <div class="dropdown mt-5">
-          <div class="dropdown-trigger">
-            <button class="button" aria-haspopup="true" aria-controls="dropdown-menu3">
-              <span>Select a liquor</span>
-              <span class="icon is-small">
-                <i class="fas fa-angle-down" aria-hidden="true"></i>
-              </span>
-              
-            </button>
-          </div>
-        </div>
+
       </div>
 
     </div>
   </main>
 
-  <div class="thanks-container mt-5 is-hidden">
-    <div id="hidden" class="column">
-      <h3>Thanks for choosing Booze n Binge!</h3>
-      <h4>Previous Pairings:</h4>
-      <ul id="storage-container">
-        <!-- <li>Previous pairings1</li> -->
-      </ul>
+  <div class="thanks-container mt-5">
+    <div id="hidden" class="columns is-flex-wrap-wrap">
+
+      <div class="column is-full">
+        <h3 class="subtitle is-4 has-text-white has-text-centered">Thanks for choosing Booze n Binge!</h3>
+      </div>
+      <h4 class="subtitle is-5 has-text-white ml-3 has-text-centered">Previous Pairings:</h4>
+      <div class="column">
+        <ul id="storage-container">
+          <!-- <li>Previous pairings1</li> -->
+        </ul>
+      </div>
     </div>
 
   </div>
