took away dropdown, added input element and button. Also updated card titles

--- a/index.html
+++ b/index.html
@@ -25,36 +25,19 @@
     <div class="columns is-variable is-justify-content-space-around">
 
       <div class="card column is-4 is-half">
-        <h2 class="card-header-title is-centered">Movie Picker card</h2>
-        <div class="dropdown is-active mt-5">
-          <div class="dropdown-trigger">
-            <button class="button" aria-haspopup="true" aria-controls="dropdown-menu2">
-              <span>Select a genre</span>
-              <span class="oi ml-2" data-glyph="chevron-bottom"></span>
-            </button>
-          </div>
-          <div class="dropdown-menu is-hidden" id="dropdown-menu2" role="menu">
-            <div class="dropdown-content">
-              <a href="#" class="dropdown-item">Comedy</a>
-              <hr class="dropdown-divider">
-              <a href="#" class="dropdown-item">Animation</a>
-              <hr class="dropdown-divider">
-              <a href="#" class="dropdown-item">Drama</a>
-              <hr class="dropdown-divider">
-              <a href="#" class="dropdown-item">Action</a>
-              <hr class="dropdown-divider">
-              <a href="#" class="dropdown-item">Thriller</a>
-              <hr class="dropdown-divider">
-              <a href="#" class="dropdown-item">Romance</a>
-              <hr class="dropdown-divider">
-              <a href="#" class="dropdown-item">Sci-fi</a>
-              <hr class="dropdown-divider">
-            </div>
-          </div>
+        <h2 class="card-header-title is-centered subtitle is-3">Movie Picker</h2>
+        <div class="field">
+          <label class="label mt-3 subtitle is-5">Movie Title</label>
+        </div>
+        <div class="field"> 
+          <input class="input" type="text" placeholder="Movie input">
+        </div>
+        <div class="field">  
+          <button class="button is-black">Search</button>
         </div>
       </div>
       <div class="card column is-4 is-half">
-        <h2 class="card-header-title is-centered">Drink Picker Card</h2>
+        <h2 class="card-header-title is-centered subtitle is-3">Drink Card</h2>
 
         <div class="drink-container">
           <!-- <h3>Random Drink Name</h3>
