changed font size and for card subtitles

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="card column is-4 is-half">
         <h2 class="card-header-title is-centered subtitle is-3">Drink Card</h2>
 
-        <div class="drink-container">
+        <div class="drink-container subtitle is-5">
           <!-- <h3>Random Drink Name</h3>
           <img id="drink-img"/>
           <ul>
