added button functionality, able to see info in console

--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
         </div>
         <div class="field"> 
           <input class="input" type="text" placeholder="Movie input">
-        </div>
-        <div class="field">  
-          <button class="button is-black">Search</button>
+          <button class="button is-black mt-5">Search</button>
         </div>
       </div>
       <div class="card column is-4 is-half">
