add HTML commetns and fix CSS spacing

--- a/index.html
+++ b/index.html
@@ -23,35 +23,23 @@
 
   <main class="picker-container mt-5 mx-auto">
     <div class="columns is-variable is-justify-content-space-around">
-
+      <!-- Movie Card -->
       <div class="card column is-4 is-half">
-        <h2 class="card-header-title is-centered subtitle is-3">Movie Picker</h2>
+        <h2 class="card-header-title is-centered subtitle is-3">Movie</h2>
         <div class="field">
           <label class="label mt-3 subtitle is-5">Movie Title</label>
         </div>
         <div class="field"> 
-          <input class="input" type="text" placeholder="Movie input">
+          <input class="input" type="text" placeholder="Movie title">
           <button class="button is-black mt-5">Search</button>
         </div>
       </div>
+      <!-- Drink Card -->
       <div class="card column is-4 is-half">
-        <h2 class="card-header-title is-centered subtitle is-3">Drink Card</h2>
-
+        <h2 class="card-header-title is-centered subtitle is-3">Drink</h2>
         <div class="drink-container subtitle is-5">
-          <!-- <h3>Random Drink Name</h3>
-          <img id="drink-img"/>
-          <ul>
-            <li>Drink Ingrediants 1</li>
-            <li>Drink Ingrediants 2</li>
-            <li>Drink Ingrediants 3</li>
-            <li>Drink Ingrediants 4</li>
-          </ul>
-          <br>
-          <p>Drink Instructions here:</p> -->
         </div>
-
       </div>
-
     </div>
   </main>
 
