added padding to thanks-container

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <label class="label mt-3 subtitle is-5">Movie Title</label>
         </div>
         <div class="field"> 
-          <input class="input" type="text" placeholder="Movie title">
+          <input class="input" type="text" placeholder="Search for movie">
           <button class="button is-black mt-5">Search</button>
         </div>
       </div>
@@ -43,7 +43,7 @@
     </div>
   </main>
 
-  <div class="thanks-container my-5">
+  <div class="thanks-container my-5 px-3">
     <div id="hidden" class="columns is-flex-wrap-wrap">
 
       <div class="column is-full">
@@ -51,7 +51,7 @@
       </div>
       <h4 class="subtitle is-5 has-text-white ml-3 has-text-centered">Previous Pairings:</h4>
       <div class="column">
-        <ul id="storage-container">
+        <ul id="storage-container" class="storage-container has-text-white">
           <!-- <li>Previous pairings1</li> -->
         </ul>
       </div>
