add narrowed down netflixID to genre function

--- a/index.html
+++ b/index.html
@@ -27,11 +27,13 @@
       <div class="card column is-4 is-half">
         <h2 class="card-header-title is-centered subtitle is-3">Movie</h2>
         <div class="field">
-          <label class="label mt-3 subtitle is-5">Movie Title</label>
+          <label class="label mt-3 subtitle is-5"></label>
         </div>
         <div class="field"> 
-          <input class="input" type="text" placeholder="Movie title">
+          <input class="input" type="text" placeholder="Search a movie title">
           <button class="button is-black mt-5">Search</button>
+        </div>
+        <div class="movie-info">
         </div>
       </div>
       <!-- Drink Card -->
