--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="field">
           <label class="label mt-3 subtitle is-5"></label>
         </div>
-        <div class="field"> 
+        <div class="field" id="movie-search"> 
           <input class="input" type="text" placeholder="Search a movie title">
           <button class="button is-black mt-5">Search</button>
         </div>
