resetting drink cards

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
           <label class="label mt-3 subtitle is-5">Movie Title</label>
         </div>
         <div class="field"> 
-          <input class="input" type="text" placeholder="Search for movie">
+          <input id = "submit" class="input" type="text" placeholder="Search for movie">
           <button class="button is-black mt-5">Search</button>
         </div>
       </div>
       <!-- Drink Card -->
-      <div class="card column is-4 is-half">
+      <div id = drinkCard class="card column is-4 is-half">
         <h2 class="card-header-title is-centered subtitle is-3">Drink</h2>
         <div class="drink-container subtitle is-5">
         </div>
