--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <header class="hero">
     <div class="hero-body">
       <h1 id="title" class="title is-1 has-text-white has-text-centered">Booze n Binge</h1>
+            <h4 class="title is-3 has-text-white has-text-centered">You pick the movie, we'll pick the drink</h4>
     </div>
   </header>
 
