--- a/index.html
+++ b/index.html
@@ -29,17 +29,15 @@
         <div class="field">
           <label class="label mt-3 subtitle is-5"></label>
         </div>
-        <div class="field" id="movie-search"> 
-          <input class="input" type="text" placeholder="Search a movie title">
-        <div class="field"> 
-          <input id = "submit" class="input" type="text" placeholder="Search for movie">
+        <div class="field">
+          <input id="submit" class="input" type="text" placeholder="Search for Movie Title">
           <button class="button is-black mt-5">Search</button>
         </div>
         <div class="movie-info">
         </div>
       </div>
       <!-- Drink Card -->
-      <div id = drinkCard class="card column is-4 is-half">
+      <div id=drinkCard class="card column is-4 is-half">
         <h2 class="card-header-title is-centered subtitle is-3">Drink</h2>
         <div class="drink-container subtitle is-5">
         </div>
