--- a/index.html
+++ b/index.html
@@ -45,17 +45,16 @@
       </div>
     </div>
   </main>
-
+  <!-- Thank you -->
   <div class="thanks-container my-5 px-3">
     <div id="hidden" class="columns is-flex-wrap-wrap">
-
       <div class="column is-full">
         <h3 class="subtitle is-4 has-text-white has-text-centered">Thanks for choosing Booze n Binge!</h3>
       </div>
+      <!-- Previous Pairings -->
       <h4 class="subtitle is-5 has-text-white ml-3 has-text-centered">Previous Pairing:</h4>
       <div class="column saved">
         <ul id="storage-container" class="storage-container has-text-white">
-          <!-- <li>Previous pairings1</li> -->
         </ul>
       </div>  
     </div>
